--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"publint": "^0.1.11",
+		"sass": "^1.62.0",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.2.0",
 		"tslib": "^2.5.0",
